重构后端代码